Fix: Bottom Rounded Corner - Change the tab to be visible first #251

--- a/userChrome.css
+++ b/userChrome.css
@@ -1591,7 +1591,7 @@
     /* Box */
     display: block !important;
     position: absolute !important;
-    z-index: 1 !important;
+    z-index: -1 !important;
 
     /* Shape */
     width: var(--tab-corner-rounding) !important;
